# breath-master

./: .gitignore  CMakeLists.txt  Readme.md
colors/: CMakeLists.txt
colors/extra/: Bamboo.colors  Blender.colors  BreathDarkNeutral.colors  CMakeLists.txt  GimpDark.colors  Mojito.colors  YouTube.colors
konsole/: Breath.colorscheme  BreathLight.colorscheme  CMakeLists.txt
layout-templates/: CMakeLists.txt
layout-templates/default-panel/: metadata.desktop
layout-templates/default-panel/contents/: layout.js
lnf/: CMakeLists.txt
lnf/breath/: metadata.desktop
lnf/breath-dark/: metadata.desktop
lnf/breath-dark/contents/: defaults
lnf/breath-dark/contents/layouts/: org.kde.plasma.desktop-layout.js
lnf/breath-dark/contents/splash/: Splash.qml
lnf/breath-dark/contents/splash/images/: busy.svgz  kde.svgz  manjarologo.svgz
lnf/breath-light/: metadata.desktop
lnf/breath-light/contents/: defaults
lnf/breath/contents/: defaults
lnf/breath/contents/splash/: Splash.qml
lnf/breath/contents/splash/images/: busy.svgz  manjarologo.svgz
migration/: CMakeLists.txt
migration/breath2tobreath/: CMakeLists.txt  breath2tobreath.upd  main.cpp
plasma/: CMakeLists.txt
plasma/breath/: CMakeLists.txt  metadata.desktop
plasma/breath-dark/: CMakeLists.txt  metadata.desktop  widgets
plasma/breath-light/: CMakeLists.txt  colors  icons  metadata.desktop
plasma/breath-light/widgets/: clock.svgz
plasma/breath/icons/: accessories.svgz  notification.svgz  notifications.svgz  pamac.svgz  start.svgz  yakuake.svgz
plasma/breath/widgets/: clock.svgz
sddm-theme/: Login.qml  metadata.desktop  theme.conf.cmake
sddm-theme/dummydata/: config.qml
wallpapers/: CMakeLists.txt
wallpapers/Bamboo/: metadata.desktop
wallpapers/Bamboo at Night/: metadata.desktop
wallpapers/North/: metadata.desktop
yakuake/: CMakeLists.txt
yakuake/breath-dark/: CMakeLists.txt  tabs.skin  title.skin
yakuake/breath-light/: CMakeLists.txt  tabs.skin  title.skin
